--- a/sidebar.html
+++ b/sidebar.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar Design</title>
+    <link rel="stylesheet" href="sidebar.css">
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
-        <div class="content"></div>
+        <div class="sidebar">sidebar</div>
+        <div class="content">content</div>
     </div>
 </body>
 </html>
