--- a/sidebar.html
+++ b/sidebar.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">sidebar</div>
+        <div class="sidebar">
+            <div class="menu-item">
+                <img src="img/sidebar/house.png"/>
+                <span class="menu-item">HOME</span>
+            </div>
+        </div>
         <div class="content">content</div>
     </div>
 </body>
