menu buttons added

--- a/sidebar.html
+++ b/sidebar.html
@@ -11,9 +11,30 @@
         <div class="sidebar">
             <div class="menu-item">
                 <img src="img/sidebar/house.png"/>
-                <span class="menu-item">HOME</span>
+                <span class="menu-item"><h3>HOME</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/dashboard.png"/>
+                <span class="menu-item"><h3>Dashboard</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/house.png"/>
+                <span class="menu-item"><h3>HOME</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/house.png"/>
+                <span class="menu-item"><h3>HOME</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/house.png"/>
+                <span class="menu-item"><h3>HOME</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/house.png"/>
+                <span class="menu-item"><h3>HOME</h3></span>
             </div>
         </div>
+        
         <div class="content">content</div>
     </div>
 </body>
