--- a/sidebar.html
+++ b/sidebar.html
@@ -14,28 +14,34 @@
                 <span class="menu-item"><h3>HOME</h3></span>
             </div>
             <div class="menu-item">
-                <img src="img/sidebar/dashboard.png"/>
-                <span class="menu-item"><h3>Dashboard</h3></span>
+                <img src="img/sidebar/group.png"/>
+                <span class="menu-item"><h3>Groups</h3></span>
             </div>
             <div class="menu-item">
-                <img src="img/sidebar/house.png"/>
-                <span class="menu-item"><h3>HOME</h3></span>
+                <img src="img/sidebar/information.png"/>
+                <span class="menu-item"><h3>Information</h3></span>
             </div>
             <div class="menu-item">
-                <img src="img/sidebar/house.png"/>
-                <span class="menu-item"><h3>HOME</h3></span>
+                <img src="img/sidebar/decision.png"/>
+                <span class="menu-item"><h3>Progess</h3></span>
             </div>
             <div class="menu-item">
-                <img src="img/sidebar/house.png"/>
-                <span class="menu-item"><h3>HOME</h3></span>
+                <img src="img/sidebar/user.png"/>
+                <span class="menu-item"><h3>Users</h3></span>
             </div>
             <div class="menu-item">
-                <img src="img/sidebar/house.png"/>
-                <span class="menu-item"><h3>HOME</h3></span>
+                <img src="img/sidebar/customer-satisfaction.png"/>
+                <span class="menu-item"><h3>Feedback</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/phone-call.png"/>
+                <span class="menu-item"><h3>Contact Us</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="img/sidebar/settings.png"/>
+                <span class="menu-item"><h3>Settings</h3></span>
             </div>
         </div>
-        
-        <div class="content">content</div>
     </div>
 </body>
 </html>
