--- a/pages/group.html
+++ b/pages/group.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Groups</title>
 </head>
 <body>
-    
+    <h1 style="color: indigo;">This is the WebPage for Groups</h1>
 </body>
 </html>
