--- a/pages/group.html
+++ b/pages/group.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Groups</title>
+    <title>Group Page</title>
+    <link rel="stylesheet" href="./../css/sidebar.css">
 </head>
 <body>
-    <h1 style="color: indigo;">This is the WebPage for Groups</h1>
+    <div class="container">
+        <div class="sidebar">
+            <a class="menu-item .active-menu" href="./../sidebar.html">
+                <img src="./../img/sidebar/house.png"/>
+                <span class="menu-item"><h3>HOME</h3></span>
+            </a>
+            <a class="menu-item" href="./group.html">
+                <img src="./../img/sidebar/group.png"/>
+                <span class="menu-item"><h3>Groups</h3></span>
+            </a>
+            <a class="menu-item" href="./info.html">
+                <img src="./../img/sidebar/information.png"/>
+                <span class="menu-item"><h3>Information</h3></span>
+            </a>
+            <div class="menu-item">
+                <img src="./../img/sidebar/decision.png"/>
+                <span class="menu-item"><h3>Progess</h3></span>
+            </div>
+            <a class="menu-item">
+                <img src="./../img/sidebar/user.png"/>
+                <span class="menu-item"><h3>Users</h3></span>
+            </a>
+            <a class="menu-item">
+                <img src="./../img/sidebar/customer-satisfaction.png"/>
+                <span class="menu-item"><h3>Feedback</h3></span>
+            </a>
+            <div class="menu-item">
+                <img src="./../img/sidebar/phone-call.png"/>
+                <span class="menu-item"><h3>Contact Us</h3></span>
+            </div>
+            <div class="menu-item">
+                <img src="./../img/sidebar/settings.png"/>
+                <span class="menu-item"><h3>Settings</h3></span>
+            </div>
+        </div>
+        <div class="content">
+            <h1 style="color: rgb(99, 185, 202);"><i>This is GroupPage</i></h1>
+        </div>
+    </div>
 </body>
 </html>
